chore: change license from MIT to Apache 2.0
Switch to Apache License 2.0 for explicit patent grant protection.
Update pyproject.toml classifiers and README badge accordingly.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "kubeshield"
 version = "0.1.0"
 description = "AI-powered Kubernetes manifest security scanner"
 readme = "README.md"
-license = { text = "MIT" }
+license = { text = "Apache-2.0" }
 requires-python = ">=3.11"
 authors = [
     { name = "José Pérez", email = "jose@gestiondigital.es" },
@@ -18,7 +18,7 @@ classifiers = [
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: System Administrators",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
